--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 <h4>
                                     <strong>Almound</strong>
                                 </h4>
-                                <p>บราวนี่อัลมอนด์ อัลม่อนด์สไลด์บางๆและสับ ใคนชอบอัลมอนด์ห้ามพลาด</p>
+                                <p>บราวนี่อัลมอนด์ อัลม่อนด์สไลด์บางๆและสับ ใครชอบอัลมอนด์ห้ามพลาด</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
